Fix scrollbar in postDetail

--- a/src/Design/Posts/PostDetail/Toc.scss
+++ b/src/Design/Posts/PostDetail/Toc.scss
@@ -79,3 +79,13 @@
     }
   }
 }
+.toc::-webkit-scrollbar {
+  width: 4px;
+  height: 20px;
+}
+
+.toc::-webkit-scrollbar-thumb {
+  background-color: $border-color-light;
+  outline: 1px solid $border-color;
+  border-radius: 10px;
+}
